fix layout bug

--- a/source/sass/_patterns.sass
+++ b/source/sass/_patterns.sass
@@ -9,6 +9,9 @@ body
   max-width: 100%
   overflow-x: hidden
 
+.row
+  overflow-x: hidden
+
 ul, ol
   margin-left: rem-calc(30)
   > li
